--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Anime Qoute project",
   "license": "ISC",
   "author": "Pumpkin.pie",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
   }
 }
